# media-gateway

./: -a  .gitattributes  BATCH_005_TASK_006_FILES.md  BATCH_007_TASKS.md  Cargo.toml  README.md  TASK_007_COMPLETE.md  WORKSPACE_SUMMARY.md  docker-compose.yml
.github/workflows/: ci-cd.yaml
apps/mcp-server/src/: server.ts
apps/mcp-server/src/tools/: check_availability.ts  get_content_details.ts  get_genres.ts  get_recommendations.ts  initiate_playback.ts  (+2 more)
config/: prometheus.yml
config/loki/: loki-config.yml
config/prometheus/: recording_rules.yml
config/promtail/: promtail-config.yml
crates/api/: Cargo.toml
crates/api/src/: circuit_breaker.rs  config.rs  health.rs  main.rs  proxy.rs  rate_limit.rs  server.rs
crates/api/src/health/: aggregator.rs  mod.rs
crates/api/src/middleware/: auth.rs  cache.rs  logging.rs  mod.rs  request_id.rs  security_headers.rs
crates/api/src/routes/: content.rs  discover.rs  mod.rs  playback.rs  search.rs  sona.rs  sync.rs  user.rs
crates/api/tests/: health_aggregator_test.rs  integration_gateway_proxy.rs
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  jwt.rs  lib.rs  main.rs  middleware.rs  rate_limit_config.rs  rbac.rs  scopes.rs  server.rs  session.rs  storage.rs  token.rs  token_family.rs
crates/auth/src/api_keys/: manager.rs  middleware.rs  tests.rs
crates/auth/src/email/: service.rs
crates/auth/src/mfa/: mod.rs  totp.rs
crates/auth/src/middleware/: mod.rs  rate_limit.rs  rate_limit_integration_tests.rs
crates/auth/src/oauth/: device.rs  handlers.rs  mod.rs  pkce.rs
crates/auth/src/oauth/providers/: github.rs  google.rs  mod.rs
crates/auth/src/tests/: jwt_test.rs  mfa_test.rs  mod.rs
crates/auth/tests/: google_oauth_endpoints_tests.rs  google_oauth_tests.rs  mfa_integration_test.rs  rate_limit_integration_test.rs  token_family_integration_test.rs  verify_rate_limit_wiring.rs
crates/core/: Cargo.toml
crates/core/src/: database.rs  error.rs  lib.rs  pagination.rs  sanitization.rs  shutdown.rs  tests.rs  validation.rs
crates/core/src/models/: content.rs  search.rs  user.rs
crates/core/src/resilience/: tests.rs
crates/core/src/telemetry/: middleware.rs  mod.rs  tracing.rs
crates/core/src/tests/: content_test.rs  mod.rs  types_test.rs  user_test.rs  validation_test.rs
crates/discovery/: Cargo.toml
crates/discovery/examples/: analytics_usage.rs
crates/discovery/src/: cache.rs  config.rs  embedding.rs  intent.rs  lib.rs  main.rs  server.rs
crates/discovery/tests/: route_registration_test.rs  search_analytics_integration_test.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: deep_link.rs  embedding.rs  entity_resolution.rs  genre_mapping.rs  lib.rs  main.rs  pipeline.rs  qdrant.rs  rate_limit.rs  repository.rs
crates/ingestion/tests/: entity_resolution_benchmark_test.rs  entity_resolution_integration_test.rs  metadata_enrichment_integration_test.rs  webhook_integration_test.rs
crates/mcp-server/src/: lib.rs  main.rs  tools.rs
crates/mcp-server/tests/: integration_test.rs  stdio_transport_test.rs
crates/playback/: Cargo.toml
crates/playback/src/: cleanup.rs  continue_watching.rs  lib.rs  main.rs  progress.rs  session.rs  watch_history.rs
crates/playback/tests/: continue_watching_integration_test.rs  integration_test.rs
crates/sona/: Cargo.toml
crates/sona/src/: ab_testing.rs  cold_start.rs  collaborative.rs  content_based.rs  context.rs  diversity.rs  graph.rs  inference.rs  lib.rs  lora.rs  main.rs  matrix_factorization.rs  profile.rs  recommendation.rs  server.rs  types.rs
crates/sona/tests/: collaborative_filtering_test.rs  graph_tests.rs  graph_unit_tests.rs
crates/sync/: Cargo.toml
crates/sync/src/: command_router.rs  device.rs  lib.rs  main.rs  persistence.rs  pubnub.rs  repository.rs  server.rs  websocket.rs
crates/sync/src/crdt/: hlc.rs  lww_register.rs  mod.rs  or_set.rs
crates/sync/src/sync/: mod.rs  progress.rs  publisher.rs  queue.rs  watchlist.rs
crates/sync/tests/: integration_repository_test.rs
docker/: docker-compose.yml
docs/: telemetry-otlp-integration.md
docs/runbooks/: DEPLOYMENT.md  INCIDENT_RESPONSE.md  ROLLBACK.md  TROUBLESHOOTING.md
examples/: TELEMETRY_QUICKSTART.md  docker-compose.telemetry.yml  otel-collector-config.yaml  telemetry_otlp_example.rs  verify_otlp_integration.sh
migrations/: 009_playback_progress.sql  OTLP_INTEGRATION_SUMMARY.md
plans/batches/: BATCH_012_TASKS.md  BATCH_013_TASKS.md
scripts/: dev-setup.sh
(+50 files in other folders)
