[package]
name = "media-gateway-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
media-gateway-core = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
governor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tonic = { workspace = true }
