[package]
name = "media-gateway-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
